--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -47,7 +47,7 @@
         android:id="@+id/etMain"
         android:textColorHint="#aaffffff"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="17sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
@@ -56,6 +56,8 @@
         android:importantForAutofill="no"
         android:inputType="textShortMessage"
         android:minHeight="48dp"
+        android:background="@drawable/roundedrectoutline"
+        android:paddingHorizontal="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/wordList" />
